Switch to using Jetty HttpClient which does not cause the HNAP interface to freeze. Remove periodic reboot.
Signed-off-by: Mike Major <mike_j_major@hotmail.com>